--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL=http://127.0.0.1:8801/
+REACT_APP_BASE_URL=http://127.0.0.1:8880
+REACT_APP_BASE_IMG_URL=http://127.0.0.1:8880/img
