--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_BASE_URL=http://127.0.0.1:8880
 REACT_APP_BASE_IMG_URL=http://127.0.0.1:8880/img
 
-# REACT_APP_BASE_URL=http://45.12.75.57:8080
-# REACT_APP_BASE_IMG_URL=http://45.12.75.57:/img
+# REACT_APP_BASE_URL=http://45.12.75.57:8880
+# REACT_APP_BASE_IMG_URL=http://45.12.75.57:8880/img
 
 
